--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "then-redis": "^2.0.0"
   },
   "devDependencies": {
-    "angular": "^1.5.5",
-    "angular-animate": "^1.5.5",
+    "angular": "1.5.5",
+    "angular-animate": "1.5.5",
     "angular-local-storage": "^0.2.7",
     "angular-ui-router": "^0.2.18",
     "babel-core": "^6.7.7",
